@@ -124,6 +124,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #22118: Switch urllib.parse to use RFC 3986 semantics for the
+  resolution of relative URLs, rather than RFCs 1808 and 2396.
+  Patch by Demian Brecht.
+
 - Issue #21549: Added the "members" parameter to TarFile.list().
 
 - Issue #19628: Allow compileall recursion depth to be specified with a -r
